Updated extractors.py with local disease ontology

--- a/notebooks/map_scratch.ipynb
+++ b/notebooks/map_scratch.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -26,33 +26,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "import multiprocessing as mp\n",
     "import time\n",
     "import sys\n",
     "import pymongo\n",
     "# from annotator.keyword_annotator import KeywordAnnotator\n",
     "# from annotator.geoname_annotator import GeonameAnnotator\n",
-    "import pubcrawler.extractors as extractors\n",
+    "import pubcrawler.extractors as ex\n",
     "\n",
-    "# keyword_annotator = KeywordAnnotator(keywords=extractors.get_annotation_keywords())\n",
-    "# geoname_annotator = GeonameAnnotator()\n",
-    "\n",
-    "articles = pymongo.MongoClient()[db][collection]\n",
-    "\n",
-    "if skip_field is not None:\n",
-    "    query = {skip_field: {'$exists': False}}\n",
-    "else:\n",
-    "    query = {}\n",
-    "\n",
-    "articles.count(query)\n",
     "\n",
     "def chunk_slices(length, by):\n",
     "    items = list(range(0, length + 1, by))\n",
@@ -61,43 +48,184 @@
     "    slices = [slice(items[i], items[i+1]) for i in range(0, len(items)-1)]\n",
     "    return(slices)\n",
     "\n",
-    "num_to_annotate = 100\n",
-    "\n",
-    "num_workers = 4\n",
-    "\n",
-    "queue = mp.Queue()\n",
-    "for i in chunk_slices(num_to_annotate, by = 7):\n",
-    "    queue.put(i)\n",
-    "for w in range(num_workers):\n",
-    "    queue.put('STOP')\n",
-    "\n",
-    "out_queue = out\n",
-    "\n",
-    "query = {'keywords': {'$exists': False}}\n",
-    "del(query)\n",
-    "\n",
-    "def worker(db, collection, slice_queue, to_extract, query, out_queue):\n",
+    "def worker(url, db, collection, to_extract, query, slice_queue):\n",
     "    articles = pymongo.MongoClient()[db][collection]\n",
     "    for s in iter(slice_queue.get, 'STOP'):\n",
     "        print(s)\n",
     "        cursor = articles.find(query)[s]\n",
-    "        extractors.extract_and_write_multiple(cursor, to_extract)\n",
+    "        ex.extract_and_write_multiple(cursor, to_extract)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Namespace(c='articlesubset', d='pmc', l=None, s='keywords', u='localhost', w='8', x=['extract_disease_ontology_keywords'])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import argparse\n",
+    "parser = argparse.ArgumentParser()\n",
+    "parser.add_argument(\n",
+    "    \"-u\", \"--mongo_url\", default=\"localhost\", dest = \"u\"\n",
+    ")\n",
+    "parser.add_argument(\n",
+    "    \"-d\", \"--mongo_db\", default=\"pmc\", dest = \"d\"\n",
+    ")\n",
+    "parser.add_argument(\n",
+    "    \"-c\", \"--mongo_collection\", default=\"articlesubset\", dest = \"c\"\n",
+    ")\n",
+    "parser.add_argument(\n",
+    "    \"-x\", \"-extract\", action=\"append\", default=None, dest = \"x\"\n",
+    ")\n",
+    "parser.add_argument(\n",
+    "    \"-s\", \"-skip_field\", default=None, dest = \"s\"\n",
+    ")\n",
+    "parser.add_argument(\n",
+    "    \"-w\", \"-workers\", default=4, dest = \"w\"\n",
+    ")\n",
+    "parser.add_argument(\n",
+    "    \"-l\", \"-limit\", default=None, dest = \"l\"\n",
+    ")\n",
+    "args = parser.parse_args([\"-x\", \"extract_disease_ontology_keywords\", \"-s\", \"keywords\", \"-w\", \"8\", \"-c\", \"articlesubset\"])\n",
+    "args"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['extract_disease_ontology_keywords']\n"
+     ]
+    }
+   ],
+   "source": [
+    "if args.x is not None:\n",
+    "    print(args.x)\n",
+    "    extractor_funs = [eval(x) for x in ['ex.' + x for x in args.x]]\n",
+    "else:\n",
+    "    print(\"Please specify at least one extractor function\", file=sys.stderr)\n",
+    "    sys.exit(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "if args.s is not None:\n",
+    "    query = {args.s: {'$exists': False}}\n",
+    "else:\n",
+    "    query = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Making connection.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Making connection.\")\n",
+    "articles = pymongo.MongoClient(args.u)[args.d][args.c]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "About to count.\n",
+      "Total for query is 10000.\n",
+      "About to chunk.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"About to count.\")\n",
+    "total_for_query = articles.count(query)\n",
+    "num_to_annotate = args.l if args.l is not None else total_for_query\n",
+    "num_workers = int(args.w)\n",
+    "print(\"Total for query is {}.\".format(total_for_query))\n",
+    "\n",
+    "print(\"About to chunk.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ex.strip_article_info(articles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "queue = mp.Queue()\n",
+    "for i in chunk_slices(num_to_annotate, by = 100):\n",
+    "    queue.put(i)\n",
+    "for w in range(num_workers):\n",
+    "    queue.put('STOP')\n",
+    "\n",
     "\n",
     "worker_args = (\n",
-    "    'pmc',\n",
-    "    'articlesubset',\n",
+    "    args.u,\n",
+    "    args.d,\n",
+    "    args.c,\n",
+    "    extractor_funs,\n",
+    "    query,\n",
     "    queue,\n",
-    "    extractors.extract_disease_ontology_keywords,\n",
-    "    {'keywords': {'$exists': False}},\n",
-    "    out_queue\n",
     ")\n",
     "\n",
-    "for w in range(num_workers):\n",
-    "    mp.Process(target=worker, args=worker_args).start()\n",
+    "print(\"About to start.\")\n",
     "\n",
-    "while not queue.empty():\n",
-    "    \n",
-    "\n"
+    "for w in range(num_workers):\n",
+    "    mp.Process(target=worker, args=worker_args).start()"
    ]
   },
   {
