Trying to solve parallelism problems.

--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -2,6 +2,90 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Making connection.\n",
+      "1\n",
+      "About to count.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "import sys\n",
+    "import pymongo\n",
+    "# from annotator.keyword_annotator import KeywordAnnotator\n",
+    "# from annotator.geoname_annotator import GeonameAnnotator\n",
+    "\n",
+    "import argparse\n",
+    "parser = argparse.ArgumentParser()\n",
+    "parser.add_argument(\n",
+    "    \"-u\", \"--mongo_url\", default=\"localhost\", dest = \"u\"\n",
+    ")\n",
+    "parser.add_argument(\n",
+    "    \"-d\", \"--mongo_db\", default=\"pmc\", dest = \"d\"\n",
+    ")\n",
+    "parser.add_argument(\n",
+    "    \"-c\", \"--mongo_collection\", default=\"articlesubset\", dest = \"c\"\n",
+    ")\n",
+    "parser.add_argument(\n",
+    "    \"-x\", \"-extract\", action=\"append\", default=None, dest = \"x\"\n",
+    ")\n",
+    "parser.add_argument(\n",
+    "    \"-s\", \"-skip_field\", default=None, dest = \"s\"\n",
+    ")\n",
+    "parser.add_argument(\n",
+    "    \"-w\", \"-workers\", default=4, dest = \"w\"\n",
+    ")\n",
+    "parser.add_argument(\n",
+    "    \"-l\", \"-limit\", default=None, dest = \"l\"\n",
+    ")\n",
+    "args = parser.parse_args([\"-x\", \"extract_disease_ontology_keywords\", \"-s\", \"keywords\", \"-w\", \"8\", \"-c\", \"articlesubset\"])\n",
+    "\n",
+    "if args.s is not None:\n",
+    "    query = {args.s: {'$exists': False}}\n",
+    "else:\n",
+    "    query = {}\n",
+    "\n",
+    "print(\"Making connection.\")\n",
+    "articles = pymongo.MongoClient(args.u)[args.d][args.c]\n",
+    "print(len(query))\n",
+    "print(\"About to count.\")\n",
+    "total_for_query = articles.count(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ex' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-ec7de6268fe3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip_article_info\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marticles\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'ex' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "ex.strip_article_info(articles)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "collapsed": false
@@ -478,48 +562,6 @@
     }
    ],
    "source": [
-    "import time\n",
-    "import sys\n",
-    "import pymongo\n",
-    "# from annotator.keyword_annotator import KeywordAnnotator\n",
-    "# from annotator.geoname_annotator import GeonameAnnotator\n",
-    "\n",
-    "import argparse\n",
-    "parser = argparse.ArgumentParser()\n",
-    "parser.add_argument(\n",
-    "    \"-u\", \"--mongo_url\", default=\"localhost\", dest = \"u\"\n",
-    ")\n",
-    "parser.add_argument(\n",
-    "    \"-d\", \"--mongo_db\", default=\"pmc\", dest = \"d\"\n",
-    ")\n",
-    "parser.add_argument(\n",
-    "    \"-c\", \"--mongo_collection\", default=\"articlesubset\", dest = \"c\"\n",
-    ")\n",
-    "parser.add_argument(\n",
-    "    \"-x\", \"-extract\", action=\"append\", default=None, dest = \"x\"\n",
-    ")\n",
-    "parser.add_argument(\n",
-    "    \"-s\", \"-skip_field\", default=None, dest = \"s\"\n",
-    ")\n",
-    "parser.add_argument(\n",
-    "    \"-w\", \"-workers\", default=4, dest = \"w\"\n",
-    ")\n",
-    "parser.add_argument(\n",
-    "    \"-l\", \"-limit\", default=None, dest = \"l\"\n",
-    ")\n",
-    "args = parser.parse_args([\"-x\", \"extract_disease_ontology_keywords\", \"-s\", \"keywords\", \"-w\", \"8\", \"-c\", \"articlesubset\"])\n",
-    "\n",
-    "if args.s is not None:\n",
-    "    query = {args.s: {'$exists': False}}\n",
-    "else:\n",
-    "    query = {}\n",
-    "\n",
-    "print(\"Making connection.\")\n",
-    "articles = pymongo.MongoClient(args.u)[args.d][args.c]\n",
-    "print(len(query))\n",
-    "print(\"About to count.\")\n",
-    "total_for_query = articles.count(query)\n",
-    "\n",
     "while total_for_query != 0:\n",
     "    total_for_query = articles.count(query)\n",
     "    now = time.strftime(\"%Y-%m-%d %H:%M:%S\")\n",
