--- a/notebooks/map_scratch.ipynb
+++ b/notebooks/map_scratch.ipynb
@@ -320,7 +320,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "ex.strip_article"
+   ]
   }
  ],
  "metadata": {
